--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,15 @@
 #root {
-  max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  background-image: url("artbook.webp");
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
 }
 
-.form {
-  width: 350px;
+.header-box {
+  padding: 2rem;
 }
 
 .input-wrapper {
@@ -21,9 +24,9 @@
   text-align: left;
 }
 
-.color-red {
-  color: tomato;
-}
-.color-green {
-  color: springgreen;
+.result-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
