--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-  background-image: url("artbook.webp");
+  background-image: url("/artbook.webp");
   background-position: center;
   background-repeat: no-repeat;
   min-height: 100vh;
