moved resultboxx into own component. going to make changes to the bg css

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,8 @@
   padding: 2rem;
   text-align: center;
   background-image: url("/artbook.webp");
-  background-position: center;
+  /* background-position: center; */
+  background-attachment: fixed;
   background-repeat: no-repeat;
   min-height: 100vh;
 }
