--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,33 @@
 #root {
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  position: relative;
+  min-height: 100vh;
+}
+
+.container {
+  padding: 2rem;
+  position: relative;
+  min-height: 100vh;
+}
+
+.background-image {
+  background-color: aqua;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background-image: url("/artbook.webp");
-  /* background-position: center; */
+  background-position: center;
   background-attachment: fixed;
   background-repeat: no-repeat;
-  min-height: 100vh;
+  background-size: cover; /* Adjust the size to cover the container */
+}
+
+.content-container {
+  position: relative;
+  z-index: 1;
 }
 
 .header-box {
